20250415 新增註冊的DTO By Timmy
